// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordForm component should renders correctly in initial state 1`] = `
<Styled(View)>
  <Styled(View)>
    <Field
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "ariaLabel": "input",
            "dataLocator": "input-field",
            "enableSuccessCheck": false,
            "id": "input",
            "keyboardType": "default",
            "label": "input",
            "marginBottom": true,
            "meta": Object {
              "error": "",
              "touched": "",
            },
            "onChangeText": [Function],
            "secureTextEntry": false,
            "showErrorIcon": true,
            "showSuccessCheck": false,
            "successText": "",
            "type": "text",
          },
          "attrs": Array [],
          "displayName": "Styled(TextBox)",
          "inlineStyle": InlineStyle {
            "rules": Array [
              "
    ",
              "
  ",
              [Function],
              ";
",
              ";
  ",
            ],
          },
          "render": [Function],
          "styledComponentId": "StyledNativeComponent",
          "target": [Function],
          "withComponent": [Function],
        }
      }
      dataLocator="password"
      id="password"
      label="lbl_resetPassword_password"
      name="password"
      secureTextEntry={true}
      type="text"
    />
    <Styled(View)>
      <ReactTooltip
        backgroundColor="#fff"
        height={200}
        onClose={[Function]}
        onOpen={[Function]}
        overlayColor="rgba(250, 250, 250, 0.80)"
        pointerColor="#fff"
        popover={
          <PasswordRequirement
            labels={Object {}}
            resetPassword={false}
          />
        }
        textAlign="left"
        toggleOnPress={true}
        width={300}
        withOverlay={false}
        withPointer={true}
      >
        <Styled(ImageComp)
          alt=""
          height={12}
          host=""
          source={
            Object {
              "testUri": "../../../../core/src/assets/info-icon.png",
            }
          }
          url=""
          width={12}
        />
      </ReactTooltip>
    </Styled(View)>
    <Styled(View)>
      <Field
        component={[Function]}
        dataLocator="hide-show-pwd"
        disabled={false}
        hideCheckboxIcon={true}
        name="hide-show-pwd"
        onClick={[Function]}
        rightText="lbl_changePassword_show"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Field
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "ariaLabel": "input",
            "dataLocator": "input-field",
            "enableSuccessCheck": false,
            "id": "input",
            "keyboardType": "default",
            "label": "input",
            "marginBottom": true,
            "meta": Object {
              "error": "",
              "touched": "",
            },
            "onChangeText": [Function],
            "secureTextEntry": false,
            "showErrorIcon": true,
            "showSuccessCheck": false,
            "successText": "",
            "type": "text",
          },
          "attrs": Array [],
          "displayName": "Styled(TextBox)",
          "inlineStyle": InlineStyle {
            "rules": Array [
              "
    ",
              "
  ",
              [Function],
              ";
",
              ";
  ",
            ],
          },
          "render": [Function],
          "styledComponentId": "StyledNativeComponent",
          "target": [Function],
          "withComponent": [Function],
        }
      }
      dataLocator="confirmPassword"
      id="confirmPassword"
      label="lbl_resetPassword_confirmPassword"
      name="confirmPassword"
      secureTextEntry={true}
      type="text"
    />
    <Styled(View)>
      <Field
        component={[Function]}
        dataLocator="hide-show-confirm-pwd"
        disabled={false}
        hideCheckboxIcon={true}
        name="hide-show-confirm-pwd"
        onClick={[Function]}
        rightText="lbl_changePassword_show"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(CustomButton)
    active={false}
    buttonVariation="variable-width"
    color=""
    customStyle={Object {}}
    customTextStyle={null}
    disableButton={false}
    fill="BLUE"
    fullWidth=""
    iconColor="gray.800"
    iconName="chevron-down"
    iconSize="fs12"
    locator=""
    navigation={Object {}}
    onPress={null}
    selected={false}
    selectedIcon="chevron-up"
    showIcon={false}
    text="lbl_resetPassword_resetCta"
    theme={Object {}}
    type="submit"
    url=""
  />
</Styled(View)>
`;

exports[`ResetPasswordForm component should renders correctly with success and error 1`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="green.500"
    dataLocator=""
    fontSize="fs12"
    fontWeight="semibold"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XL"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Field
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "ariaLabel": "input",
            "dataLocator": "input-field",
            "enableSuccessCheck": false,
            "id": "input",
            "keyboardType": "default",
            "label": "input",
            "marginBottom": true,
            "meta": Object {
              "error": "",
              "touched": "",
            },
            "onChangeText": [Function],
            "secureTextEntry": false,
            "showErrorIcon": true,
            "showSuccessCheck": false,
            "successText": "",
            "type": "text",
          },
          "attrs": Array [],
          "displayName": "Styled(TextBox)",
          "inlineStyle": InlineStyle {
            "rules": Array [
              "
    ",
              "
  ",
              [Function],
              ";
",
              ";
  ",
            ],
          },
          "render": [Function],
          "styledComponentId": "StyledNativeComponent",
          "target": [Function],
          "withComponent": [Function],
        }
      }
      dataLocator="password"
      id="password"
      label="lbl_resetPassword_password"
      name="password"
      secureTextEntry={true}
      type="text"
    />
    <Styled(View)>
      <ReactTooltip
        backgroundColor="#fff"
        height={200}
        onClose={[Function]}
        onOpen={[Function]}
        overlayColor="rgba(250, 250, 250, 0.80)"
        pointerColor="#fff"
        popover={
          <PasswordRequirement
            labels={Object {}}
            resetPassword={false}
          />
        }
        textAlign="left"
        toggleOnPress={true}
        width={300}
        withOverlay={false}
        withPointer={true}
      >
        <Styled(ImageComp)
          alt=""
          height={12}
          host=""
          source={
            Object {
              "testUri": "../../../../core/src/assets/info-icon.png",
            }
          }
          url=""
          width={12}
        />
      </ReactTooltip>
    </Styled(View)>
    <Styled(View)>
      <Field
        component={[Function]}
        dataLocator="hide-show-pwd"
        disabled={false}
        hideCheckboxIcon={true}
        name="hide-show-pwd"
        onClick={[Function]}
        rightText="lbl_changePassword_show"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Field
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "ariaLabel": "input",
            "dataLocator": "input-field",
            "enableSuccessCheck": false,
            "id": "input",
            "keyboardType": "default",
            "label": "input",
            "marginBottom": true,
            "meta": Object {
              "error": "",
              "touched": "",
            },
            "onChangeText": [Function],
            "secureTextEntry": false,
            "showErrorIcon": true,
            "showSuccessCheck": false,
            "successText": "",
            "type": "text",
          },
          "attrs": Array [],
          "displayName": "Styled(TextBox)",
          "inlineStyle": InlineStyle {
            "rules": Array [
              "
    ",
              "
  ",
              [Function],
              ";
",
              ";
  ",
            ],
          },
          "render": [Function],
          "styledComponentId": "StyledNativeComponent",
          "target": [Function],
          "withComponent": [Function],
        }
      }
      dataLocator="confirmPassword"
      id="confirmPassword"
      label="lbl_resetPassword_confirmPassword"
      name="confirmPassword"
      secureTextEntry={true}
      type="text"
    />
    <Styled(View)>
      <Field
        component={[Function]}
        dataLocator="hide-show-confirm-pwd"
        disabled={false}
        hideCheckboxIcon={true}
        name="hide-show-confirm-pwd"
        onClick={[Function]}
        rightText="lbl_changePassword_show"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(CustomButton)
    active={false}
    buttonVariation="variable-width"
    color=""
    customStyle={Object {}}
    customTextStyle={null}
    disableButton={false}
    fill="BLUE"
    fullWidth=""
    iconColor="gray.800"
    iconName="chevron-down"
    iconSize="fs12"
    locator=""
    navigation={Object {}}
    onPress={null}
    selected={false}
    selectedIcon="chevron-up"
    showIcon={false}
    text="lbl_resetPassword_resetCta"
    theme={Object {}}
    type="submit"
    url=""
  />
</Styled(View)>
`;
